[project]
name = "card-service"
version = "0.1.0"
description = ""
authors = [
    {name = "abdullahzulfiqar653",email = "abdullahzulfiqar653@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "playwright (>=1.54.0,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
